--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -363,7 +363,7 @@
 						font-weight: 600;
 						line-height: 130%;
 						letter-spacing: -0.2px;
-						text-transform: uppercase;
+						text-transform: none;
 						margin-bottom: 20px;
 					}
 					form{
@@ -371,6 +371,34 @@
 					}
 				}
 			}
+
+			.voting-modal__wrapper.open{
+				.voting-modal {
+					max-width: 569px;
+					width: 100%;
+					max-height: 313px;
+					
+					main{
+						h2{
+							margin-top: 5px;
+							margin-bottom: 10px;
+							font-family: 'Oswald';
+							font-size: 32px;
+							font-weight: 600;
+							line-height: 130%;
+							letter-spacing: -0.32px;
+							text-transform: none;
+						}
+						p{
+							font-family: 'Inter Tight';
+							font-size: 16px;
+							font-weight: 400;
+							line-height: 150%;
+							letter-spacing: -0.16px;
+						}
+					}
+				}
+			}	
 
 			.sidebar {
 				padding-top: size(64);
@@ -527,24 +555,5 @@
 				}
 			}	
 		}	
-	}
-	.voting-modal {
-		max-width: 569px;
-		width: 100%;
-		max-height: 313px;
-		main{
-			h2{
-				margin-top: 5px;
-				font-family: 'Oswald';
-				font-size: 32px;
-				font-weight: 500;
-				line-height: 130%;
-				letter-spacing: -0.32px;
-				text-transform: capitalize;
-			}
-			p{
-				text-align: center;
-			}
-		}
 	}
 }
