--- a/trunk/assets/scss/voting-page.scss
+++ b/trunk/assets/scss/voting-page.scss
@@ -1,6 +1,8 @@
 @import 'atoms/fields';
 @import 'atoms/buttons';
 
+@import 'components/modal';
+
 #concordamos-voting-form {
 	max-width: 570px;
 	width: 100%;
