--- a/trunk/assets/scss/components/modal.scss
+++ b/trunk/assets/scss/components/modal.scss
@@ -21,21 +21,20 @@
 		}
 	}
 
-	header, main {
-		padding: 16px 32px;
-	}
-
-
 	header {
 		align-items: center;
 		background-color: #26A9F9;
 		border-radius: 29px 29px 0 0;
 		display: flex;
 		justify-content: end;
+		padding: 0;
+		.close{
+			padding: 13px 24px 16px;
+		}
 	}
 
 	main {
-
+		padding: 20px 28px 29px;
 		h2 {
 			text-transform: initial;
 		}
