ajustes css aba meu voto

--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -510,6 +510,11 @@
 			}	
 		}
 		.voting-content{
+			.container{
+				margin: 0;
+				padding: 0;
+				max-width: 100%;
+			}
 			border: none;
 			.panel-tabs{
 				width: 100%;
