--- a/trunk/assets/scss/components/modal.scss
+++ b/trunk/assets/scss/components/modal.scss
@@ -31,11 +31,11 @@
 		.close{
 			padding: 13px 24px 16px;
 			@media(max-width: 782px){
-				padding: 5px 16px 8px;	
+				padding: 5px 16px 8px;
 			}
 			img{
 				@media(max-width: 782px){
-					max-width: 57%;	
+					max-width: 57%;
 				}
 			}
 		}
@@ -48,6 +48,11 @@
 		}
 		h2 {
 			text-transform: initial;
+		}
+	}
+	&.danger {
+		header {
+			background-color: #FF2E22;
 		}
 	}
 }
