--- a/trunk/assets/scss/my-account.scss
+++ b/trunk/assets/scss/my-account.scss
@@ -3,3 +3,114 @@
 
 @import 'components/modal';
 @import 'components/tabs';
+
+.page-template-template-my-account{
+    #concordamos-my-account{
+        .my-account{
+            .my-account-header{
+                border-bottom: 3px solid #000;
+                background-color: #f5f5f5;
+                padding-top: 55px;
+                padding-bottom: 30px;
+                .my-account-header__name{
+                    max-width: 1140px;
+                    width: 100%;
+                    margin-left: auto;
+                    margin-right: auto;
+                    font-family: Inter;
+                    font-size: 20px;
+                    font-weight: 600;
+                    line-height: 130%;
+                    letter-spacing: -0.2px;
+                    text-transform: uppercase;
+                   
+                }
+                h1{
+                    max-width: 1140px;
+                    width: 100%;
+                    margin-left: auto;
+                    margin-right: auto;
+                    font-family: 'Oswald';
+                    font-size: 64px;
+                    font-weight: 600;
+                    line-height: 112%; 
+                    letter-spacing: -0.64px;
+                    text-transform: uppercase;
+                    margin-top: 20px;    
+                }
+
+            }
+            .my-account-settings{
+                border-bottom: 3px solid #000;
+                display: grid;
+                grid-template-columns: 1.4fr 1fr;
+                h2{
+                    font-size: 32px;
+                }
+                .my-account-box:nth-of-type(1){
+                    border-right: 3px solid #000;
+                    .container{
+                        max-width: 675px;
+                        width: 100%;
+                        margin-left: auto;
+                        margin-right: 0;
+                        padding-left: 0;
+                    }
+                    .my-account-field{
+                        display: inline-block;
+                        dd{
+                            margin-left: 0;
+                        }
+                    }    
+                }
+            }
+            .my-account-panel{
+                .panel-tabs{
+                    width: 100%;
+                    display: grid;
+                    grid-template-columns: 0.19fr 1fr 1fr 0.19fr;
+                    button{
+                        background-color: transparent;
+                        padding-top: 21px;
+                        padding-bottom: 23px;
+                        color: #000;
+                        text-align: center;
+                        font-family: 'Oswald';
+                        font-size: 24px;
+                        font-weight: 500;
+                        line-height: 130%;
+                        letter-spacing: -0.24px;
+                        text-transform: uppercase;
+                    }
+                    
+                    .panel-tab{
+                        border-bottom: 3px solid #000;
+                        border-left: 1.7px solid #000;
+                        border-right: 1.7px solid #000; 
+                    }
+                    .selected{
+                        
+                        border-bottom: none;
+                        border-left: 1.7px solid #000;
+                        border-right: 1.7px solid #000;
+                        
+                    }
+                    .panel-previous-tab{
+                        padding-left: 0;
+                        border-bottom: 3px solid #000;
+                        border-right: 1.7px solid #000;
+                        
+                        
+                    }
+                    .panel-next-tab{
+                        padding-right: 0;
+                        border-bottom: 3px solid #000;
+                        border-left: 1.7px solid #000;
+                        
+                            
+                    }
+                }    
+            }    
+        }    
+    }    
+}
