--- a/trunk/assets/scss/components/navbar-mobile.scss
+++ b/trunk/assets/scss/components/navbar-mobile.scss
@@ -32,6 +32,10 @@
         box-shadow: 4px 4px 0px 0px #000;
         &:hover{
             background-color:#FF73E7 ;
+            
+        }
+        &:active{
+            background-color:#FF73E7 ;
         }
     }
 
