--- a/trunk/assets/scss/components/voting-card.scss
+++ b/trunk/assets/scss/components/voting-card.scss
@@ -77,6 +77,9 @@
 			list-style: none;
 			padding: 6px;
 			font-size: 12px;
+			color: #111;
+			font-family: 'Inter Tight';
+			font-weight: 700;
 		}
 	}
 
