--- a/trunk/assets/scss/my-account.scss
+++ b/trunk/assets/scss/my-account.scss
@@ -13,6 +13,10 @@
                 background-color: #f5f5f5;
                 padding-top: 55px;
                 padding-bottom: 30px;
+                @media(max-width: 1210px){
+                    padding-left: 15px;
+                    padding-right: 15px;
+                }
                 .my-account-header__name{
                     max-width: 1140px;
                     width: 100%;
@@ -38,7 +42,10 @@
                     letter-spacing: -0.64px;
                     text-transform: uppercase;
                     margin-top: 20px;
-                    color: #000;    
+                    color: #000;
+                    @media(max-width: 782px){
+                        font-size: 32px;;
+                    }    
                 }
 
             }
@@ -46,6 +53,13 @@
                 border-bottom: 3px solid #000;
                 display: grid;
                 grid-template-columns: 1.4fr 1fr;
+                @media(max-width: 1210px){
+                    padding-left: 15px;
+                    padding-right: 15px;
+                }
+                @media(max-width: 782px){
+                    display: block;
+                }
                 h2{
                     font-size: 32px;
                     color: #000;
@@ -60,6 +74,10 @@
                 .my-account-box:nth-of-type(1){
                     border-right: 3px solid #000;
                     padding-bottom: 115px;
+                    @media(max-width: 782px){
+                        padding-bottom: 0;
+                        border-right: none;
+                    }
                     .container{
                         max-width: 675px;
                         width: 100%;
@@ -69,7 +87,7 @@
                     }
                     .my-account-field{
                         display: inline-block;
-                        margin-right: 130px;
+                        margin-right: 125px;
                         dt{
                             font-family: 'Inter';
                             font-size: 20px;
@@ -99,6 +117,11 @@
                 .my-account-box:nth-of-type(2){
                     .container{
                         margin-left: 62px;
+                        @media(max-width: 782px){
+                            margin-left: 0;
+                            padding-bottom: 70px;
+                            padding-left: 0;
+                        }
                         h2{
                             margin-bottom: 38px;
                         }
@@ -111,10 +134,20 @@
                 }
             }
             .my-account-panel{
+                background-color: #f5f5f5;
+                @media(max-width: 1210px){
+                    padding-left: 15px;
+                    padding-right: 15px;
+                }
+                @media(max-width: 782px){
+                    padding-right: 0;
+                    padding-left: 0;
+                }
                 .panel-tabs{
                     width: 100%;
                     display: grid;
                     grid-template-columns: 0.19fr 1fr 1fr 0.19fr;
+                    
                     button{
                         background-color: transparent;
                         padding-top: 21px;
@@ -156,7 +189,61 @@
                             
                     }
                 }
+                .my-account-tab{
+                    details{
+                        height: 68px;
+                        max-width: 270px;
+                        width: 100%;
+                        border-radius: 16px;
+                        border: 3px solid #000;
+                        padding: 16px 0 16px 32px;
+                        margin-left: 106px;
+                        margin-top: 40px;
+                        background-color: #fff;
+                        @media(max-width: 782px){
+                            margin-left: 15px;
+                        }
+		
+                        >summary{
+                            display: flex;
+                            color: var(--low-light, #666);
+                            font-family: 'Oswald';
+                            font-size: 24px;
+                            font-weight: 500;
+                            letter-spacing: -0.24px;
+                            gap: 110px;
+                
+                            &:after{
+                                content: '';
+                                background-image: url(../../assets/images/filter.svg);
+                                width: 32px;
+                                height: 32px;
+                                background-repeat: no-repeat;
+                                position: relative;
+                                background-size: 100%;
+                            }
+                        }
+                        .filters-open{
+                            border-bottom: 3px solid #000;
+                            border-right: 3px solid #000;
+                            border-left: 3px solid #000;
+                            width: 270px;
+                            margin-left: -35px;
+                            margin-top: 3px;
+                            padding: 20px 10px;
+                            position: relative;
+                            z-index: 0;
+                            background-color: #f5f5f5;
+                            border-radius: 0 0 16px 16px;
+
+                        }
+                    }
+                }
                 .my-account-voting-grid{
+                    @media(max-width: 782px){
+                        padding-left: 15px;
+                        padding-right: 15px;
+                    }
                     display: grid;
                     gap: 1rem;
                     grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
