--- a/trunk/assets/scss/my-account.scss
+++ b/trunk/assets/scss/my-account.scss
@@ -133,6 +133,49 @@
                     }
                 }
             }
+
+            .voting-modal__wrapper.open{
+				.voting-modal {
+					max-width: 563px;
+					width: 100%;
+					height: auto;
+					
+					main{
+						h2{
+							margin-top: 5px;
+							margin-bottom: 15px;
+							font-family: 'Oswald';
+							font-size: 32px;
+							font-weight: 600;
+							line-height: 130%;
+							letter-spacing: -0.32px;
+							text-transform: none;
+							@media(max-width: 782px){
+								font-size: 24px;	
+							}
+						}
+						label{
+							font-family: 'Inter Tight';
+							font-size: 16px;
+							font-weight: 400;
+							line-height: 150%;
+							letter-spacing: -0.16px;
+							@media(max-width: 782px){
+								font-size: 14px;	
+							}
+                            input{
+                                border-radius: 8px;
+                                border: 3px solid #000;
+                                margin-bottom: 30px;
+                            }
+						}
+                        .primary{
+                            background-color: #EDE103 !important;
+                        }
+					}
+				}
+			}
+
             .my-account-panel{
                 background-color: #f5f5f5;
                 @media(max-width: 1210px){
