ajuste de padding no navbar para mobile

--- a/trunk/assets/scss/components/navbar-mobile.scss
+++ b/trunk/assets/scss/components/navbar-mobile.scss
@@ -6,6 +6,7 @@
         display: flex;
         position: fixed;
         z-index: 999;
+        padding-top: 570px;
     }
     button{   
         padding: 0px;
