--- a/trunk/assets/scss/archive-voting.scss
+++ b/trunk/assets/scss/archive-voting.scss
@@ -14,6 +14,7 @@
 		display: inline-block;
 		height: 16px;
 		width: 16px;
+		background-size: 100%;
 	}
 	
 
@@ -28,10 +29,12 @@
 			margin-top: 67px;
 			margin-bottom: 47px;
 		}
+
 		.voting-archive-filters{
 			display: grid;
 			grid-template-columns: 4fr 1fr;
 			gap: 33px;
+
 			details{
 				border: 3px solid black;
 				border-radius: 32px;
@@ -52,8 +55,9 @@
 			border-right: none;
 			border-radius: 32px 0 0 32px;
 			flex: 1;
-			max-height: 62px;
+			max-height: 70px;
 			padding: 23px 32px 13px;
+
 			&::placeholder{
 				font-family: 'Oswald';
 				color: #666;
@@ -66,6 +70,7 @@
 			border-radius: 0 32px 32px 0;
 			line-height: 1;
 			padding: 0.5rem 32px;
+			height: 70px;
 
 			.icon {
 				background-image: url(../../assets/images/search.svg);
@@ -98,6 +103,50 @@
 				background-size: 100%;
 			}
 		}
+
+		.filters-open{
+			display: inline-flex;
+			max-width: 700px;
+			width: 100%;
+			position: absolute;
+			gap: 10px;
+			margin-left: -220px;
+			justify-content: flex-start;
+			margin-top: 10px;
+			color: #111;
+			font-family: "Inter Tight";
+			font-size: 17px;
+			font-weight: 700;
+			line-height: 150%;
+			letter-spacing: -0.16px;
+			
+			.radio-options{
+				display: flex;
+				gap: 5px;
+
+				label{
+
+					input[type="radio"]{
+						width: 14px;
+						height: 14px;
+						border: 1px solid #111;
+
+						&:after{
+							left: 2px;
+							top: 2px;
+							width: 7px;
+							height: 7px;
+						}
+					}
+
+					span{
+						font-size: 14px;
+						padding-left: 3px;
+					}
+				}
+			}
+		}
+
 	}
 
 	.voting-archive-grid {
@@ -109,6 +158,7 @@
 		@media screen and (max-width: 20rem) {
 			grid-template-columns: 1fr;
 		}
+		
 		article:nth-of-type(3n + 2) {
 			box-shadow: 6px 6px 0px 0px rgba(0,0,0,1);
 		}
