adjust in card voting and archive voting

--- a/trunk/assets/scss/components/voting-card.scss
+++ b/trunk/assets/scss/components/voting-card.scss
@@ -47,6 +47,8 @@
 		font-weight: 400;
 		line-height: 150%;
 		letter-spacing: -0.16px;
+		height: 72px;
+		overflow: hidden;
 	}
 	.voting-card__staus{
 		font-family: 'Inter Tight';
