--- a/trunk/assets/scss/archive-voting.scss
+++ b/trunk/assets/scss/archive-voting.scss
@@ -86,7 +86,7 @@
 			font-family: 'Oswald';
 			font-size: var(--wp--preset--font-size-medium);
 			font-weight: 500;
-
+			margin: 0;
 			letter-spacing: -0.24px;
 			margin-top: 16px;
 			margin-bottom: 16px;
@@ -159,8 +159,11 @@
 			grid-template-columns: 1fr;
 		}
 		
-		article:nth-of-type(3n + 2) {
-			box-shadow: 6px 6px 0px 0px rgba(0,0,0,1);
+		article{
+
+			&:hover{
+				box-shadow: 6px 6px 0px 0px rgba(0,0,0,1);
+			}
 		}
 	}
 
