--- a/trunk/assets/scss/components/voting-card.scss
+++ b/trunk/assets/scss/components/voting-card.scss
@@ -50,6 +50,7 @@
 		height: 72px;
 		overflow: hidden;
 	}
+
 	.voting-card__staus{
 		font-family: 'Inter Tight';
 		margin: 16px 0;
@@ -58,6 +59,8 @@
 		font-weight: 400;
 		line-height: 150%;
 		letter-spacing: -0.14px;
+		height: 25px;
+
 		img{
 			margin-top: -2px;
 			margin-right: 4px;
