--- a/trunk/assets/scss/components/voting-card.scss
+++ b/trunk/assets/scss/components/voting-card.scss
@@ -49,6 +49,7 @@
 		letter-spacing: -0.16px;
 		height: 72px;
 		overflow: hidden;
+		margin-bottom: 0;
 	}
 
 	.voting-card__staus{
@@ -59,7 +60,9 @@
 		font-weight: 400;
 		line-height: 150%;
 		letter-spacing: -0.14px;
-		height: 25px;
+		height: 19px;
+    	margin-bottom: 6px;
+		margin-top: 3px;
 
 		img{
 			margin-top: -2px;
