Fix tabs layout

--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -535,8 +535,7 @@
 			border: none;
 			.panel-tabs{
 				width: 100%;
-				display: grid;
-				grid-template-columns: 0.19fr 1fr 1fr 0.19fr;
+				display: flex;
 				button{
 					background-color: transparent;
 					padding-top: 21px;
@@ -552,32 +551,28 @@
 				}
 
 				.panel-tab{
-
+					flex: 2;
 					border-bottom: 3px solid #000;
 					border-left: 1.7px solid #000;
 					border-right: 1.7px solid #000;
-
 				}
 				.selected{
-
 					border-bottom: none;
 					border-left: 1.7px solid #000;
 					border-right: 1.7px solid #000;
-
+				}
+				.panel-previous-tab, .panel-next-tab {
+					flex: 1;
 				}
 				.panel-previous-tab{
 					padding-left: 0;
 					border-bottom: 3px solid #000;
 					border-right: 1.7px solid #000;
-
-
 				}
 				.panel-next-tab{
 					padding-right: 0;
 					border-bottom: 3px solid #000;
 					border-left: 1.7px solid #000;
-
-
 				}
 			}
 			.wrapper{
