--- a/trunk/assets/scss/my-account.scss
+++ b/trunk/assets/scss/my-account.scss
@@ -168,6 +168,7 @@
                                 border-radius: 8px;
                                 border: 3px solid #000;
                                 margin-bottom: 30px;
+                                padding: 10px 96px 11px 16px;
                             }
 						}
                         .primary{
