add link de criar votacao na minha conta

--- a/trunk/assets/scss/my-account.scss
+++ b/trunk/assets/scss/my-account.scss
@@ -243,8 +243,28 @@
                         margin-right: auto;
                         display: flex;
                         justify-content: space-between;
-                        .primary{
-                            margin-right: 0 !important;
+                        .link-primary{
+                            background-color: #FFF766;
+                            border-radius: 80px;
+                            border: 3px solid #000;
+                            padding: 13px 24px 9px;
+                            color: #000;
+                            font-family: 'Oswald';
+                            font-size: 24px;
+                            font-weight: 500;
+                            line-height: 130%;
+                            letter-spacing: -0.24px;
+                            text-decoration: none;
+                            @media(max-width: 782px){
+                                font-size: 16px;
+                                padding: 6px 16px;	
+                            }
+                            &:hover{
+                                background-color: transparent;
+                                color: #000;
+                                border: 3px solid #000;
+                                background-color: #FFF766;
+                            }	
                         }
                     }
                     details{
