--- a/trunk/assets/scss/archive-voting.scss
+++ b/trunk/assets/scss/archive-voting.scss
@@ -32,13 +32,12 @@
 
 		.voting-archive-filters{
 			display: grid;
-			grid-template-columns: 4fr 1fr;
-			gap: 33px;
+			grid-template-columns: 3fr 1fr;
 
 			details{
+				border-radius: 10px;
 				border: 3px solid black;
-				border-radius: 32px;
-					
+								
 			}
 		}
 	}
@@ -79,19 +78,36 @@
 	}
 
 	details{
+		display: flex;
+		border: 3px solid #000;
+		background: var(--wp--preset--color--high-pure);
+		height: 68px;
+		max-width: 273px;
+		margin-left: 5px;
+		flex-direction: row;
+		align-content: center;
+		align-items: center;
+		justify-content: center;
 		
 		>summary{
 			display: flex;
-			color: var(--low-light, #666);
-			font-family: 'Oswald';
-			font-size: var(--wp--preset--font-size-medium);
+			color: var(--wp--preset--color--low-light);
+			font-family: Oswald;
+			font-size: var(--wp--preset--font-size--medium);
+			font-style: normal;
 			font-weight: 500;
-			margin: 0;
+			line-height: normal;
 			letter-spacing: -0.24px;
-			margin-top: 16px;
-			margin-bottom: 16px;
-			margin-left: 32px;
-			gap: 80px;
+			margin: 0;
+			flex-direction: row;
+			align-content: center;
+			margin-top: 12px;
+			margin-right: 34px;
+			align-items: center;
+			margin-right: 0px;
+			padding-left: 32px;
+    		padding-right: 32px;
+			justify-content: space-between;
 
 			&:after{
 				content: '';
@@ -105,24 +121,28 @@
 		}
 
 		.filters-open{
-			display: inline-flex;
-			max-width: 700px;
+			display: flex;
 			width: 100%;
 			position: absolute;
-			gap: 10px;
-			margin-left: -220px;
-			justify-content: flex-start;
-			margin-top: 10px;
+			justify-content: center;
 			color: #111;
 			font-family: "Inter Tight";
 			font-size: 17px;
 			font-weight: 700;
 			line-height: 150%;
-			letter-spacing: -0.16px;
+			background-color: white;
+			flex-direction: column;
+			margin-top: 11px;
+			border: 3px solid black;
+			border-top: none;
+			padding-left: 32px;
+			padding-right: 32px;
+		
 			
 			.radio-options{
 				display: flex;
-				gap: 5px;
+				gap: 16px;
+				flex-direction: column;
 
 				label{
 
@@ -140,8 +160,13 @@
 					}
 
 					span{
-						font-size: 14px;
-						padding-left: 3px;
+						color: var(--low-dark, #000);
+						font-family: Oswald;
+						font-size: 24px;
+						font-style: normal;
+						font-weight: 500;
+						line-height: normal;
+						letter-spacing: -0.24px;
 					}
 				}
 			}
